# GnssReceiver

./: BuildWithExamples.bat  CMakeLists.txt  README.md
FrameParser/: ByteData.h  CMakeLists.txt  GPSFrameParser.cpp  GPSFrameParser.h  IFrameParser.h  Utility.h
FrameParser/Collectors/: BitCollector.h  ByteCollector.cpp  ByteCollector.h  SubframeCollector.cpp  SubframeCollector.h  WordCollector.h
FrameParser/General/: Context.cpp  Context.h  Stat.cpp  Stat.h
FrameParser/Headers/: HandoverWordHeader.h  SatClockHeader.h
FrameParser/MessageProcessors/: EphemerisProcessor.cpp  EphemerisProcessor.h  IDataProcessor.h  SatClockProcessor.cpp  SatClockProcessor.h  SubframeProcessor.cpp  SubframeProcessor.h
_examples/FrameParserExample/: CMakeLists.txt  main.cpp  signal.txt
examples/: CMakeLists.txt
examples/AbsoluteShiftEstimationExample/: CMakeLists.txt  main.cpp
examples/FrameParserExample/: CMakeLists.txt  main.cpp
examples/GPSSatLocationEstimatorExample/: CMakeLists.txt  main.cpp
examples/GlonassSatLocationEstimatorExample/: CMakeLists.txt  main.cpp
examples/ReceiverLocationEstimatorExample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/CommonUtilities/: CMakeLists.txt  Log.h  ProtocolType.h  Stat.cpp  Stat.h
src/FrameParser/: ByteData.cpp  ByteData.h  CMakeLists.txt  CommonGPSSatelliteStorage.h  FrameParserFactory.cpp  FrameParserFactory.h  FrameParserStatNames.h  GPSFrameParser.cpp  GPSFrameParser.h  IFrameParser.h  IGPSSatelliteStorage.h  ISatelliteStorage.h  Utility.h
src/FrameParser/Collectors/: BitCollector.cpp  BitCollector.h  ByteCollector.cpp  ByteCollector.h  SubframeCollector.cpp  SubframeCollector.h  SyncrobyteSeeker.cpp  SyncrobyteSeeker.h  WordCollector.cpp  WordCollector.h
src/FrameParser/Headers/: EphemerisHeader.h  HandoverWordHeader.h  SatClockHeader.h
src/FrameParser/MessageProcessors/: EphemerisProcessor.cpp  EphemerisProcessor.h  IDataProcessor.h  SatClockProcessor.cpp  SatClockProcessor.h  SubframeProcessor.cpp  SubframeProcessor.h
src/GnssProcessor/: CMakeLists.txt  GnssProcessor.cpp  GnssProcessor.h  GnssProcessorStrategy.cpp  GnssProcessorStrategy.h  GnssProcessorStrategyFactory.cpp  GnssProcessorStrategyFactory.h  IDataInput.h  IGnssProcessor.h  IGnssProcessorStrategy.h
src/GnssProcessor/SatTracker/: SatTracker.h  SatTrackerFactory.cpp  SatTrackerFactory.h
src/GnssProcessor/Storage/: GPSSatStorage.cpp  GPSSatStorage.h  GnssStorage.cpp  GnssStorage.h  IGPSSatStorage.h  IGnssStorage.h  ISatStorage.h
src/GnssProcessor/Wrappers/: GPSFrameParserStorageWrapper.cpp  GPSFrameParserStorageWrapper.h  GPSSatLocEstStorageWrapper.cpp  GPSSatLocEstStorageWrapper.h  RecvEstStorageWrapper.cpp  RecvEstStorageWrapper.h
src/Math/: CMakeLists.txt  DenseMatrix.h  Overloads.h  Vector3.cpp  Vector3.h
src/ReceiverLocationEstimator/: CMakeLists.txt  CommonReceiverLocationEstimator.cpp  CommonReceiverLocationEstimator.h  IReceiverLocationEstimator.h  ISatelliteTable.h  ReceiverLocationEstimatorFactory.cpp  ReceiverLocationEstimatorFactory.h
src/SatLocationEstimator/: CMakeLists.txt  IEphemerisStorage.h  ISatLocationEstimator.h  SatLocationEstimatorFactory.cpp  SatLocationEstimatorFactory.h
src/SatLocationEstimator/GPS/: CommonGPSEphemerisStorage.h  GPSSatLocationEstimator.cpp  GPSSatLocationEstimator.h  IGPSEphemerisStorage.h
src/SatLocationEstimator/Glonass/: CommonGlonassEphemerisStorage.h  GlonassSatLocationEstimator.cpp  GlonassSatLocationEstimator.h  IGlonassEphemerisStorage.h
